fix: contrast adjust

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ time, mark, audio, video {
 
   -webkit-tap-highlight-color: transparent;
   color: var(--white);
+  text-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
   font-family: 'Quicksand', sans-serif;
   font-weight: 600;
 }
